{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 95,
  "lineage": "53c2ad57-4aa7-d020-8f8e-c8e3da0e2ee6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-node-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02cb2a3406ee8cac5",
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:instance/i-0bd8e17118bcffd86",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd8e17118bcffd86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0737019738a013eef",
            "private_dns": "ip-10-123-1-248.ap-southeast-1.compute.internal",
            "private_ip": "10.123.1.248",
            "public_dns": "ec2-13-229-78-225.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.78.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0041b400af0caeb93",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bead6585faeba90",
            "tags": {
              "Name": "tf-node-1"
            },
            "tags_all": {
              "Name": "tf-node-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02722f7ecb02bd40a"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-keypair",
            "aws_security_group.tf-sg-1",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc",
            "data.aws_ami.tf-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:internet-gateway/igw-09f4e6fbcbcb266a4",
            "id": "igw-09f4e6fbcbcb266a4",
            "owner_id": "848587260896",
            "tags": {
              "Name": "tf-igw-1"
            },
            "tags_all": {
              "Name": "tf-igw-1"
            },
            "vpc_id": "vpc-0b538bcc746d46428"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tf-rt-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09f4e6fbcbcb266a4",
            "id": "r-rtb-057ab5c5e837ad20d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057ab5c5e837ad20d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-igw-1",
            "aws_route_table.tf-rt-table",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-rt-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-057ab5c5e837ad20d",
            "id": "rtb-057ab5c5e837ad20d",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f4e6fbcbcb266a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt-1-public"
            },
            "tags_all": {
              "Name": "tf-rt-1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b538bcc746d46428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bbba811aa63a224",
            "route_table_id": "rtb-057ab5c5e837ad20d",
            "subnet_id": "subnet-06bead6585faeba90"
          },
          "dependencies": [
            "aws_route_table.tf-rt-table",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:security-group/sg-02722f7ecb02bd40a",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02722f7ecb02bd40a",
            "ingress": [
              {
                "cidr_blocks": [
                  "180.190.52.180/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tf-sg-1",
            "name_prefix": "",
            "owner_id": "848587260896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-sg-1"
            },
            "tags_all": {
              "Name": "tf-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b538bcc746d46428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-06bead6585faeba90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bead6585faeba90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-public-subnet-1"
            },
            "tags_all": {
              "Name": "tf-public-subnet-1"
            },
            "vpc_id": "vpc-0b538bcc746d46428"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:vpc/vpc-0b538bcc746d46428",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-04c8e932c38aa23f8",
            "default_route_table_id": "rtb-0e99d8caacab8a36b",
            "default_security_group_id": "sg-0af8a3a3c72b95039",
            "dhcp_options_id": "dopt-7f272c18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b538bcc746d46428",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e99d8caacab8a36b",
            "owner_id": "848587260896",
            "tags": {
              "Name": "tf-vpc-dev"
            },
            "tags_all": {
              "Name": "tf-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}